<resources>
    <string name="app_name">Quiz</string>
    <string name="connexionBtn">Connexion</string>
    <string name="mdp">Mot de passe</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="settings">Paramètres</string>
    <string name="share">Partager</string>
    <string name="truebtn">Vrai</string>
    <string name="falsebtn">Faux</string>
    <string name="previous">&lt; Précédant</string>
    <string name="next">Suivant &gt;</string>
    <string name="best">Record:</string>
    <string name="current">Score actuel:</string>
    <string name="finish">Terminé !</string>
    <string name="save">Enregister</string>
    <string name="goodAnswer">Bonne réponse!</string>
    <string name="wrongAnswer">Mauvaise réponse...</string>
</resources>